Fix names in controllers methods and openapi file, added new generated files
